--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <section class="top-banner">
         <div class="half-width">
             <h1>Welcome To</h1>
-            <h1><span class="orange-highlight">Rahul Biswas</span> World</h1>
+            <h1><span class="orange-highlight">Web Developer's</span> World</h1>
             <h3>World-class Professional Web Dev</h3>
             <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that work. That's why I am learning and mastering web development. I will not stop until I become the Web Development Hero.</p>
             <a class="link-button" target="_blank" href="https://www.linkedin.com/in/rahul-biswas/">Hire Me</a>
         </div>
         <div class="half-width">        
-            <img src="images/profile.png" alt="">
+            <img src="images/jhankar.png" alt="">
         </div>
     </section>
 
